--- a/index.html
+++ b/index.html
@@ -3,45 +3,50 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Armazon | online store</title>
-        <link rel="icon" href="CSS/icon.png">
+        <title>Armazon | Online Store</title>
+        <link rel="icon" href="css/icon.png">
         <link rel="stylesheet" href="CSS/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     </head>
     <body>
         <header>
+            <div class="top_header">
+                <div class="container">
+                    <a href="#" class="logo"><img src="css/Screenshot 2025-02-27 222214.png" alt=""></a>
 
-            <div class="container">
+                    <form action="" class="search_box">
+                        <div class="select_box">
+                            <select name="category" id="category">
+                                <option value="All category">All category</option>
+                                <option value="Men's Clothing">Men's Clothing</option>
+                                <option value="Women's Clothing">Women's Clothing</option>
+                                <option value="Kids' Clothing">Kids' Clothing</option>
+                                <option value="Accessories">Accessories</option>
+                                <option value="Footwear">Footwear</option>
+                            </select>
+                        </div>
+                    
 
-                <div class="logo">
-                    <a href="index.html"><img src="CSS/Screenshot 2025-02-27 222214.png" alt="not fonde"></a>
-                </div>
+                        <input type="text" name="search" id="search" placeholder="Search Armazon" required>
 
-                <div class="search_box">
+                        <button type="submit">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                        </button>
 
-                    <select name="category" id="category">
-                        <option value="All category">All category</option>
-                        <option value="Men's Clothing">Men's Clothing</option>
-                        <option value="Women's Clothing">Women's Clothing</option>
-                        <option value="Kids' Clothing">Kids' Clothing</option>
-                        <option value="Accessories">Accessories</option>
-                        <option value="Footwear">Footwear</option>
-                    </select>
 
-                    <input type="text" name="Search" placeholder="Search Armazon" required>
+                    </form>
 
-                    <button type="submit">
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                    </button>
-                </div>
-
-                <div class="header_icon">
-                    <a href="cart.html">
-                        <i id="cart_shopping" class="fa-solid fa-cart-shopping"></i>                
-                    </a>
-                    <span class="cart_count">0</span>
+                    <div class="header_icons">
+                        <div class="icon">
+                            <a href="#">
+                                <i id="cart_shopping" class="fa-solid fa-cart-shopping"></i>
+                                <span class="count count_item_header">0</span>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </header>
+     
     </body>
 </html>
