--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Armazon | Online Store</title>
-        <link rel="icon" href="css/icon.png">
-        <link rel="stylesheet" href="CSS/style.css">
+        <link rel="icon" href="icon.png">
+        <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     </head>
     <body>
         <header>
             <div class="top_header">
                 <div class="container">
-                    <a href="#" class="logo"><img src="css/Screenshot 2025-02-27 222214.png" alt=""></a>
+                    <a href="#" class="logo"><img src="Screenshot 2025-02-27 222214.png" alt=""></a>
 
                     <form action="" class="search_box">
                         <div class="select_box">
